processed/gerrit/txt/63241.txt
Change:     63241
Subject:    LU-16518 ptlrpc: fix incompatible function type warnings
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/63241
Change-Id:  I8418b0a1e6184c37e0eba9131121a1268edf300d
Project:    fs/lustre-release
Branch:     master
Status:     NEW
Owner:      Timothy Day
Created:    2026-01-06 02:38:38.000000000
Updated:    2026-04-10 06:37:02.000000000
Patch Set:  2
Insertions: +21
Deletions:  -13
Comments:   16 (2 unresolved)

--- Labels ---
  Code-Review: wc-checkpatch: -1; Timothy Day: -1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  CC: Andreas Dilger, James Simmons
  REVIEWER: Arshad Hussain, Timothy Day

--- Commit Message ---
LU-16518 ptlrpc: fix incompatible function type warnings

Fix errors of the type:

lustre/ptlrpc/layout.c:971:2: error: cast from
  'void (*)(struct mgs_target_info *)' to
  'void (*)(void *)' converts to incompatible
  function type [-Werror,-Wcast-function-type-strict]
  971 |         DEFINE_MSGF("mgs_target_info", 0, sizeof(struct mgs_target_info),
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  972 |                     lustre_swab_mgs_target_info, NULL);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

by using union magic.

Test-Parameters: trivial
Signed-off-by: Timothy Day <timday@amazon.com>
Change-Id: I8418b0a1e6184c37e0eba9131121a1268edf300d

--- Review History ---

--- Message (Timothy Day, 2026-01-06 02:38:38.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2026-01-06 02:46:24.000000000) ---
Patch Set 1:

(3 comments)

4 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-01-06 02:46:53.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (jenkins, 2026-01-06 03:42:32.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/120137/ : SUCCESS

--- Message (Timothy Day, 2026-01-06 17:52:03.000000000) ---
Uploaded patch set 2: Patch Set 1 was rebased.

Outdated Votes:
* Verified+1, Verified-1 (copy condition: "changekind:NO_CHANGE OR changekind:NO_CODE_CHANGE")

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2026-01-06 17:57:50.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (wc-checkpatch, 2026-01-06 18:00:53.000000000) ---
Patch Set 2:

(3 comments)

4 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (jenkins, 2026-01-06 18:34:53.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/120164/ : SUCCESS

--- Message (Arshad Hussain, 2026-01-08 07:27:32.000000000) ---
Patch Set 2: Code-Review+1

(2 comments)

--- Message (James Simmons, 2026-01-08 19:21:26.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Andreas Dilger, 2026-01-08 19:59:48.000000000) ---
Patch Set 2:

(2 comments)

--- Message (Timothy Day, 2026-01-08 20:18:41.000000000) ---
Patch Set 2:

(1 comment)

--- Message (Arshad Hussain, 2026-01-09 05:22:42.000000000) ---
Patch Set 2: -Code-Review

--- Message (Timothy Day, 2026-01-09 05:37:54.000000000) ---
Patch Set 2: Code-Review-1

(1 comment)

--- Message (James Simmons, 2026-02-03 00:24:39.000000000) ---
Patch Set 2:

(1 comment)

--- Message (wc-checkpatch, 2026-04-10 06:37:02.000000000) ---
Patch Set 2: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.
